tests/baselines/reference/nullishCoalescingOperator4.errors.txt
nullishCoalescingOperator4.ts(2,19): error TS18049: 'a1' is possibly 'null' or 'undefined'.
nullishCoalescingOperator4.ts(3,19): error TS18049: 'a1' is possibly 'null' or 'undefined'.


==== nullishCoalescingOperator4.ts (2 errors) ====
    declare const a1: 'literal' | undefined | null
    const aa1 = a1 ?? a1.toLowerCase()
                      ~~
!!! error TS18049: 'a1' is possibly 'null' or 'undefined'.
    const aa2 = a1 || a1.toLocaleUpperCase()
                      ~~
!!! error TS18049: 'a1' is possibly 'null' or 'undefined'.
    